Skip to content

Playlist items are not played in the good order.

When you open the playlist in the Qt Interface, and then order the playlist by any meta_data, the playlist is played according the core order and NOT the interface order.

This is confusing.

The problem is that:

void PLModel::sort( int column, Qt::SortOrder order )

does not correspond to

void PLModel::rebuild( playlist_item_t *p_root )

&

void PLItem::updateColumnHeaders()

Moreover, there is no possibility to sort but number (id) in the columns. This has to be added. and is trivial.

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information