Last patch to close #1479 (add a column with the track id)